[package]
name = "cyber-bao"
version = "0.1.0"
edition = "2024"
description = "Poseidon2-BAO: verified streaming with Poseidon2 hash over Goldilocks"
license = "MIT OR Apache-2.0"
rust-version = "1.89"

[lints]
workspace = true

[dependencies]
cyber-poseidon2 = { path = "../cyber-poseidon2" }
bytes = "1"
smallvec = { version = "1", features = ["const_new"] }
range-collections = { version = "0.4", features = ["serde", "new_unchecked"] }
iroh-io = "0.6.1"
genawaiter = { version = "0.99.1", features = ["futures03"] }
tokio = { version = "1", features = ["io-util"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
proptest = "1"
tokio = { version = "1", features = ["macros", "rt", "io-util"] }

[features]
default = []
tokio_fsm = ["dep:tokio"]
serde = ["dep:serde", "cyber-poseidon2/serde", "bytes/serde"]
