[package]
name = "cyber-poseidon2"
version = "0.1.0"
edition = "2024"
description = "Poseidon2 hash over Goldilocks field — Blake3-compatible API for the Cyber project"
license = "MIT OR Apache-2.0"
rust-version = "1.89"

[lints]
workspace = true

[dependencies]
p3-poseidon2 = "0.4"
p3-goldilocks = "0.4"
p3-field = "0.4"
p3-symmetric = "0.4"
rand = "0.9"
rand_chacha = "0.9"
serde = { version = "1", features = ["derive"], optional = true }

# GPU backend (optional)
wgpu = { version = "28", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
pollster = { version = "0.4", optional = true }

[dev-dependencies]
proptest = "1"
wgpu = "28"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"

[features]
default = []
gpu = ["dep:wgpu", "dep:bytemuck", "dep:pollster"]
serde = ["dep:serde"]
