[package]
name = "radio-cli"
version = "0.1.0"
edition = "2021"
description = "Radio network CLI — hash, node, blob, gossip"
license = "MIT OR Apache-2.0"

[[bin]]
name = "radio"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
iroh = { path = "../iroh" }
iroh-blobs = { path = "../iroh-blobs" }
iroh-gossip = { path = "../iroh-gossip" }
cyber-poseidon2 = { path = "../cyber-poseidon2" }
cyber-bao = { path = "../cyber-bao" }
anyhow = "1"
futures-lite = "2"
tracing-subscriber = "0.3"
data-encoding = "2"
bytes = "1"
rand = "0.9"
